[package]
name = "rqbit"
version = "9.0.0-alpha.0"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2021"
description = "A bittorrent command line client and server."
license = "Apache-2.0"
documentation = "https://github.com/ikatson/rqbit"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls", "postgres", "webui", "prometheus"]
openssl-vendored = ["openssl/vendored"]
tokio-console = ["librqbit/tokio-console"]
webui = ["librqbit/webui"]
prometheus = ["librqbit/prometheus", "metrics-exporter-prometheus"]
timed_existence = ["librqbit/timed_existence"]
default-tls = ["librqbit/default-tls"]
rust-tls = ["librqbit/rust-tls"]
debug_slow_disk = ["librqbit/storage_middleware"]
postgres = ["librqbit/postgres"]
disable-upload = ["librqbit/disable-upload"]

[dependencies]
librqbit = { version = "9.0.0-alpha.0", path = "../librqbit", default-features = false, features = [
    "http-api",
    "http-api-client",
    "tracing-subscriber-utils",
    "upnp-serve-adapter",
    "watch",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
console-subscriber = { version = "0.4", optional = true }
anyhow = "1"
clap = { version = "4.5", features = ["derive", "deprecated", "env"] }
clap_complete = "4.5"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
futures = "0.3"
parse_duration = "2"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
size_format = "1"
bytes = "1.5.0"
openssl = { version = "0.10", features = ["vendored"], optional = true }
upnp-serve = { path = "../upnp-serve", default-features = false, version = "1", package = "librqbit-upnp-serve" }
metrics-exporter-prometheus = { version = "0.16", optional = true, default-features = false }
libc = "0.2.158"
signal-hook = "0.3.17"
tokio-util = "0.7.11"
gethostname = "0.5.0"
url = "2"

[dev-dependencies]
futures = { version = "0.3" }
