[package]
name = "rqbit"
version = "9.0.0-beta.1"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2024"
description = "A bittorrent command line client and server."
license = "Apache-2.0"
documentation = "https://github.com/ikatson/rqbit"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[features]
default = ["default-tls", "postgres", "webui", "prometheus"]
openssl-vendored = ["openssl/vendored"]
tokio-console = ["librqbit/tokio-console"]
webui = ["librqbit/webui"]
prometheus = ["librqbit/prometheus", "dep:metrics-exporter-prometheus"]
timed_existence = ["librqbit/timed_existence"]
default-tls = ["librqbit/default-tls"]
rust-tls = ["librqbit/rust-tls"]
debug_slow_disk = ["librqbit/storage_middleware"]
postgres = ["librqbit/postgres"]
disable-upload = ["librqbit/disable-upload"]
_disable_disk_write_net_benchmark = [
    "librqbit/_disable_disk_write_net_benchmark",
]

[dependencies]
librqbit.workspace = true

anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
clap_complete.workspace = true
console-subscriber.workspace = true
futures.workspace = true
gethostname.workspace = true
libc.workspace = true
librqbit-dualstack-sockets.workspace = true
metrics-exporter-prometheus = { workspace = true, optional = true }
openssl.workspace = true
parking_lot.workspace = true
parse_duration.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
size_format.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
tracing.workspace = true
upnp-serve.workspace = true
url.workspace = true

[dev-dependencies]
futures.workspace = true
