[package]
name = "rqbit"
version = "9.0.0-beta.1"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2024"
description = "A bittorrent command line client and server."
license = "Apache-2.0"
documentation = "https://github.com/ikatson/rqbit"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls", "postgres", "webui", "prometheus"]
openssl-vendored = ["openssl/vendored"]
tokio-console = ["librqbit/tokio-console"]
webui = ["librqbit/webui"]
prometheus = ["librqbit/prometheus", "metrics-exporter-prometheus"]
timed_existence = ["librqbit/timed_existence"]
default-tls = ["librqbit/default-tls"]
rust-tls = ["librqbit/rust-tls"]
debug_slow_disk = ["librqbit/storage_middleware"]
postgres = ["librqbit/postgres"]
disable-upload = ["librqbit/disable-upload"]
_disable_disk_write_net_benchmark = [
    "librqbit/_disable_disk_write_net_benchmark",
]

[dependencies]
librqbit = { workspace = true, features = [
    "http-api",
    "http-api-client",
    "tracing-subscriber-utils",
    "upnp-serve-adapter",
    "watch",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
console-subscriber = { workspace = true, optional = true }
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "deprecated", "env"] }
clap_complete.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
regex.workspace = true
futures.workspace = true
parse_duration.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
size_format.workspace = true
bytes.workspace = true
openssl = { workspace = true, features = ["vendored"], optional = true }
upnp-serve.workspace = true
metrics-exporter-prometheus = { workspace = true, optional = true }
libc.workspace = true
signal-hook.workspace = true
tokio-util.workspace = true
gethostname.workspace = true
url.workspace = true
librqbit-dualstack-sockets.workspace = true

[dev-dependencies]
futures.workspace = true
