[package]
name = "librqbit-sha1-wrapper"
version = "3.0.0"
edition = "2018"
description = "Common interface around various sha1 implementations used in rqbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-sha1-wrapper"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html#

[features]
default = ["sha1-crypto-hash"]
sha1-crypto-hash = ["crypto-hash"]
sha1-ring = ["ring"]

[dependencies]
crypto-hash = { version = "0.3", optional = true }
ring = { version = "0.17", optional = true }
