[package]
name = "librqbit-sha1-wrapper"
version = "4.1.0"
edition = "2024"
description = "Common interface around various sha1 implementations used in rqbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-sha1-wrapper"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html#

[features]
default = ["sha1-crypto-hash"]
sha1-crypto-hash = ["crypto-hash"]
sha1-ring = ["aws-lc-rs"]

[dependencies]
assert_cfg = "0.1.0"
crypto-hash = { version = "0.3", optional = true }
aws-lc-rs = { version = "1.12", optional = true }
