[package]
name = "librqbit-sha1-wrapper"
version = "4.1.0"
edition = "2024"
description = "Common interface around various sha1 implementations used in rqbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-sha1-wrapper"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[features]
default = ["sha1-crypto-hash"]
sha1-crypto-hash = ["dep:crypto-hash"]
sha1-ring = ["dep:aws-lc-rs"]

[dependencies]
assert_cfg.workspace = true
crypto-hash = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
