[package]
name = "librqbit-tracker-comms"
version = "3.0.0"
edition = "2024"
description = "Common interface around various sha1 implementations used in rqbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-tracker-comms"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sha1-crypto-hash"]
sha1-crypto-hash = [
    "bencode/sha1-crypto-hash",
    "librqbit-core/sha1-crypto-hash",
]
sha1-ring = ["bencode/sha1-ring", "librqbit-core/sha1-ring"]

[dependencies]
tokio = "1"
anyhow = "1"
futures = "0.3"
async-stream = "0.3.5"
buffers = { path = "../buffers", package = "librqbit-buffers", version = "4.2" }
librqbit-core = { path = "../librqbit_core", default-features = false, version = "5" }
byteorder = "1.5"
serde = { version = "1", features = ["derive"] }
urlencoding = "2"
rand = "0.9"
tracing = "0.1.40"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
bencode = { path = "../bencode", default-features = false, package = "librqbit-bencode", version = "3.1" }
url = { version = "2", default-features = false }
parking_lot = "0.12.3"
tokio-util = "0.7.13"
librqbit-dualstack-sockets = { version = "0.6.3" }
backon = "1.5.1"
itertools = "0.14.0"
serde_with = "3.13.0"
