[package]
name = "librqbit-tracker-comms"
version = "3.0.0"
edition = "2024"
description = "Common interface around various sha1 implementations used in rqbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-tracker-comms"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[dependencies]
librqbit-core.workspace = true

anyhow.workspace = true
async-stream.workspace = true
backon.workspace = true
bencode.workspace = true
buffers.workspace = true
byteorder.workspace = true
futures.workspace = true
itertools.workspace = true
librqbit-dualstack-sockets.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
