[package]
name = "librqbit-upnp-serve"
version = "1.0.1"
edition = "2024"
description = "Simple UPnP MediaServer implementation"
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-upnp-serve"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[dependencies]
librqbit-core.workspace = true
librqbit-upnp.workspace = true

anyhow.workspace = true
axum.workspace = true
bstr.workspace = true
futures.workspace = true
gethostname.workspace = true
http.workspace = true
httparse.workspace = true
librqbit-dualstack-sockets.workspace = true
mime_guess.workspace = true
network-interface.workspace = true
parking_lot.workspace = true
quick-xml.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tower-http.workspace = true

[[example]]
name = "upnp-stub-server"
