[package]
name = "librqbit-upnp"
version = "1.0.0"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2024"
description = "Library used by rqbit torrent client to lease port forwards on the router."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-upnp"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
url = { version = "2", default-features = false }
network-interface = { version = "2" }
httparse = "1.9.4"
bstr = "1.10.0"
quick-xml = { version = "0.37.1", features = ["serialize"] }
librqbit-dualstack-sockets = "0.6.9"
socket2 = "0.5.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
