[package]
name = "librqbit-upnp"
version = "1.0.0"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2024"
description = "Library used by rqbit torrent client to lease port forwards on the router."
license = "Apache-2.0"
documentation = "https://docs.rs/librqbit-upnp"
repository = "https://github.com/ikatson/rqbit"
readme = "README.md"

[dependencies]
tracing.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros"] }
futures.workspace = true
url.workspace = true
network-interface.workspace = true
httparse.workspace = true
bstr.workspace = true
quick-xml.workspace = true
librqbit-dualstack-sockets.workspace = true
socket2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
