[package]
name = "rqbit-desktop"
edition = "2024"
version = "9.0.0"
description = "rqbit torrent client"
authors = ["Igor Katson igor.katson@gmail.com"]
license = ""
repository = ""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
librqbit = { workspace = true, features = [
    "tracing-subscriber-utils",
    "http-api",
    "webui",
    "upnp-serve-adapter",
    "prometheus",
    "default-tls"

] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow.workspace = true
base64.workspace = true
http.workspace = true
directories.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing.workspace = true
serde_with.workspace = true
parking_lot.workspace = true
gethostname.workspace = true
tauri-plugin-shell.workspace = true
metrics-exporter-prometheus.workspace = true
librqbit-dualstack-sockets.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
disable-upload = ["librqbit/disable-upload"]
